# HW27

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
HW27_Avito/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializer.py  urls.py  validators.py  views.py
ads/cat/: urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selections.py  0004_ad_slug_alter_ad_description_alter_ad_is_published.py  0005_alter_ad_category.py  0006_alter_ad_category.py
ads/selections/: permissions.py  serializer.py  urls.py  view.py
authentications/: admin.py  apps.py  models.py  serializer.py  urls.py  validators.py  views.py
authentications/migrations/: 0001_initial.py  0002_user_locations.py  0003_remove_user_sex_user_age.py  0004_user_birth_date.py
data/: ads.json  categories.json  location.json  user.json  utils.py
tests/: conftest.py  factories.py  fixture.py
tests/ads/: ads_create_test.py  ads_detail_test.py  ads_list_test.py  selection_create_test.py
users/: apps.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_id_user_locations.py  0003_alter_location_lat_alter_location_lng.py
