[tool.poetry]
name = "hw27-avito"
version = "0.1.0"
description = ""
authors = ["Gysborn <forparty@gmail.com>"]
readme = "README.md"
packages = [{include = "hw27_avito"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
